updating swagger, remoove user documentation confusing
